# streamlit-ai-toolkit

./: .gitignore  .last-updated  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pages/: 1_Chat.py  2_Document_QA.py  3_Image_Analysis.py
streamlit_ai_toolkit/: __init__.py
streamlit_ai_toolkit/components/: __init__.py  chat_ui.py  file_upload.py  model_selector.py
streamlit_ai_toolkit/utils/: __init__.py  ai.py
