[project]
name = "streamlit-ai-toolkit"
version = "0.1.0"
description = "Ready-to-run AI apps with Streamlit — chat, document Q&A, image analysis, and more"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Streamlit AI Toolkit Contributors"}
]
keywords = [
    "streamlit",
    "ai",
    "chatbot",
    "openai",
    "anthropic",
    "ollama",
    "dashboard",
    "python",
    "data-science",
    "rag",
    "image-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "streamlit>=1.28",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/anomalyco/streamlit-ai-toolkit"
Repository = "https://github.com/anomalyco/streamlit-ai-toolkit.git"
Issues = "https://github.com/anomalyco/streamlit-ai-toolkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_ai_toolkit"]
